monitoring/metrics/overload-config/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  rules:
  - host: grafana.mdlmr.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-stack-grafana
            port:
              number: 80
              
  tls:
  - hosts:
    - grafana.mdlmr.fr
    secretName: grafana-mdlmr-fr-tls
